--- a/partials/improvement-results.htm
+++ b/partials/improvement-results.htm
@@ -118,7 +118,7 @@
   <div ng-if="nolowestdisplay" class="notify">
     <p>Uit je gebiedstest kwamen alleen maar positieve punten naar voren. Een ontwikkeltraject op gebied {{ gebied }} is dan ook niet nodig.</p>
     <form ng-submit="getHome()" class="buttoncent">
-      <input type="submit" value="Ga naar overzicht" class="btn btn-blue" data-page="ontwikkeltraject" data-sub="notrajecten-onlyplusses" data-type="button">
+      <input type="submit" value="Ga naar Dashboard" class="btn btn-blue" data-page="ontwikkeltraject" data-sub="notrajecten-onlyplusses" data-type="button">
     </form>
   </div>
   <!-- End No ontwikkeltraject -->
@@ -147,7 +147,7 @@
       <p ng-if="fallsavedisplay">Kennelijk heb je geen tijd nodig om je stappenplan uit te voeren. Een ontwikkeltraject is voor jou niet nodig, perfectie kun je niet verbeteren.</p>
     </div>
     <form ng-submit="getHome()" class="buttoncent">
-      <input type="submit" value="Ga naar overzicht" class="btn btn-blue" data-page="ontwikkeltraject" data-sub="reminder-confirmed" data-type="button">
+      <input type="submit" value="Ga naar Dashboard" class="btn btn-blue" data-page="ontwikkeltraject" data-sub="reminder-confirmed" data-type="button">
     </form>
   </div>
   <!-- Eńd Rest: roadmap sent -->
@@ -157,7 +157,7 @@
       <p>Er is geen ontwikkelingstraject voor je actief.</p>
     </div>
     <form ng-submit="getHome()" class="buttoncent">
-      <input type="submit" value="Ga naar overzicht" class="btn btn-blue" data-page="ontwikkeltraject" data-sub="notrajecten" data-type="button">
+      <input type="submit" value="Ga naar Dashboard" class="btn btn-blue" data-page="ontwikkeltraject" data-sub="notrajecten" data-type="button">
     </form>
   </div>
 </div>
