--- a/partials/menu.htm
+++ b/partials/menu.htm
@@ -8,7 +8,7 @@
     </div>
   </div>
   <ul class="menu-list">
-    <li class="menu-item"><a href="#!nulmeting" ng-click="closeMenu()" data-page="menu" data-sub="menulink" data-type="menu">Nulmeting</a></li>
+    <li class="menu-item"><a href="#!nulmeting" ng-click="closeMenu()" data-page="menu" data-sub="menulink" data-type="menu">Dashboard</a></li>
     <li class="menu-item"><a href="#!tests" ng-click="closeMenu()" data-page="menu" data-sub="menulink" data-type="menu">Gebiedstesten</a></li>
     <li class="menu-item"><a href="#!personalitytest" ng-click="closeMenu()" data-page="menu" data-sub="menulink" data-type="menu">Persoonlijkheidstest</a></li>
   </ul>
